# coub_saver_bot

./: .env.example  Cargo.toml  Dockerfile  Dockerfile-prod
.github/workflows/: build.yml  docker.yml
src/: bot.rs  coub.rs  main.rs
