[package]
name = "coub_saver_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
dotenv = "0.15.0"
pretty_env_logger = "0.5.0"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["json"] }
serde = "1.0.192"
serde_json = "1.0.108"
teloxide = "0.12.2"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
url = "2.4.1"
log = "0.4.20"
